tests/baselines/reference/es6ImportWithoutFromClauseNonInstantiatedModule.errors.txt
es6ImportWithoutFromClauseNonInstantiatedModule_1.ts(1,8): error TS2882: Cannot find module or type declarations for side-effect import of 'es6ImportWithoutFromClauseNonInstantiatedModule_0'.


==== es6ImportWithoutFromClauseNonInstantiatedModule_0.ts (0 errors) ====
    export interface i {
    }
    
==== es6ImportWithoutFromClauseNonInstantiatedModule_1.ts (1 errors) ====
    import "es6ImportWithoutFromClauseNonInstantiatedModule_0";
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2882: Cannot find module or type declarations for side-effect import of 'es6ImportWithoutFromClauseNonInstantiatedModule_0'.